# valor

./: .gitmodules  ARCHITECTURE_IMPROVEMENTS.md  CHROMIUMOXIDE_BUG_REPORT.md  CLAUDE.md  CRITICAL_FINDING.md  Cargo.toml  DESIGN_PLAN.md  FAILING_TESTS.md  HARNESS_FREEZE.md  HARNESS_FREEZE_FINAL.md  INVESTIGATION_COMPLETE.md  LAYOUT_TEST_BLOCKER.md  LAYOUT_TEST_INFRASTRUCTURE_BLOCKER.md  PLAN.md  REWRITE_IMPLEMENTATION_SUMMARY.md  clippy.toml  fixture_report.txt  layout_fail.txt  layouter.out  manual_chrome_strace.sh  next_steps.md  rust-toolchain.toml  rustc-ice-2025-09-10T16_21_28-18424.txt  rustc-ice-2025-09-15T03_15_54-8156.txt  rustc-ice-2025-09-16T22_04_11-4704.txt  rustc-ice-2025-09-16T22_04_11-7012.txt  rustc-ice-2025-09-24T16_33_48-24572.txt  rustc-ice-2025-09-24T16_33_48-9512.txt  rustc-ice-2026-01-11T05_34_01-15681.txt  rustc-ice-2026-01-12T21_21_54-6401.txt  rustc-ice-2026-01-12T21_35_59-32199.txt  rustc-ice-2026-01-12T22_02_21-30907.txt  rustc-ice-2026-01-12T22_16_24-8824.txt  rustc-ice-2026-01-12T22_16_41-9279.txt  rustc-ice-2026-01-12T22_17_45-9758.txt  rustc-ice-2026-01-12T23_43_23-18853.txt  rustc-ice-2026-01-13T00_40_28-22657.txt  rustc-ice-2026-01-13T00_40_28-22677.txt  rustc-ice-2026-01-13T00_47_11-25788.txt  rustc-ice-2026-01-13T10_05_26-27882.txt  (+61 more)
crates/core/: Cargo.toml
crates/core/src/: lib.rs  rayon_dispatch.rs
crates/css/: Cargo.toml
crates/css/orchestrator/: Cargo.toml
crates/css/src/: layout_helpers.rs  lib.rs  parser.rs  property_groups.rs  selector.rs  style.rs  style_types.rs  styler_context.rs  types.rs  value_resolver.rs  values.rs
crates/css/tests/: mirror_style_removal_and_order.rs
crates/html/: Cargo.toml
crates/html/src/: builder.rs  lib.rs  parser.rs  tree.rs  types.rs
crates/js/: Cargo.toml
crates/js/js_engine_v8/: Cargo.toml  build.rs
crates/js/src/: bindings.rs  console.rs  dom_index.rs  lib.rs  modules.rs  runtime.rs  runtime_prelude.js
crates/js/tests/: document_text_content.rs
crates/js_engine_v8/: Cargo.toml  build.rs
crates/js_engine_v8/src/: lib.rs
crates/js_engine_v8/tests/: bridge.rs
crates/layout/: Cargo.toml
crates/layout/src/: helpers.rs  layout_tree.rs  lib.rs  macros.rs  scroll.rs  writing_mode.rs
crates/layouter/: Cargo.toml
crates/layouter/benches/: layout_baseline.rs  partial_vs_full.rs
crates/layouter/src/: layout.rs  lib.rs  printing.rs
crates/layouter/tests/: absolute_position.rs  anonymous_block_generation.rs  auto_width.rs  block_inline_partition.rs  dirty_propagation.rs  display_none.rs  fixed_position.rs  flex_row.rs  flex_sizing.rs  fragments_scaffold.rs  margin_collapsing.rs  overflow_clipping.rs  percent_width.rs
crates/page/: Cargo.toml  build.rs
crates/page/src/: browser.rs  lib.rs  ua_stylesheet.rs
crates/page/tests/: chromium_tests.rs
crates/page_handler/: Cargo.toml
crates/page_handler/src/: accessibility.rs  config.rs  display.rs  display_api.rs  display_retained.rs  embedded_chrome.rs  events.rs  focus.rs  layout_manager.rs  lib.rs  paint.rs  runtime.rs  scheduler.rs  selection.rs  snapshots.rs  stacking.rs  state.rs  telemetry.rs  updater.rs  url.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: backend.rs  compositor.rs  damage.rs  display_list.rs  lib.rs  render_graph.rs  renderer.rs  resource_pool.rs
crates/renderer/wgpu_backend/: Cargo.toml
crates/rewrite/core/: Cargo.toml
crates/rewrite/css/: Cargo.toml
crates/rewrite/layout/: Cargo.toml
crates/rewrite/page/: Cargo.toml
crates/style_engine/: Cargo.toml
crates/style_engine/src/: computed_style.rs  dom_subscriber.rs  lib.rs  used_values.rs
crates/style_engine/tests/: cascade_and_selectors.rs  fuzz_dom_snapshot.rs  perf_epoch.rs  selectors_extra.rs
crates/valor/: Cargo.toml  build.rs
crates/valor/fixtures/: test.html
crates/valor/src/: factory.rs  layout_compare_core.rs  lib.rs  main.rs  state.rs  test_support.rs
crates/valor/tests/: ax_tree.rs  chrome_debug_test.rs  chrome_ui_headless.rs  chromium_compare.rs  chromium_tests.rs  crash_pattern_test.rs  css_mirror_tests.rs  dom_core.rs  events_basic.rs  events_common.rs  fetch_xhr.rs  focus_tabindex.rs  graphics_chromium_compare.rs  hit_test.rs  inner_html.rs  js_timers.rs  layout_noop_skip.rs  layouter_chromium_compare.rs  layouter_snapshot_smoke.rs  modules_basic.rs  mutation_observer.rs  parse_assets_test.rs  perf_counters_json.rs  retained_display_list_clip.rs  retained_snapshot_no_side_effects.rs  script_errors.rs  scripts_classic.rs  selection_highlight.rs  storage_timing.rs  test_about_blank.rs  test_cdp_connection.rs  test_chrome_isolation.rs  test_chrome_minimal.rs  test_chrome_output.rs  test_chrome_stderr.rs  test_chrome_version.rs  test_chromiumoxide.rs  test_crash_flags.rs  test_data_url.rs  test_file_url_with_sleep.rs  (+10 more)
crates/valor_dsl/: Cargo.toml  EXAMPLES.md  QUICK_START.md  README.md
crates/valor_dsl/examples/: bevy_counter.rs  bevy_ui.rs  counter.rs  image_gallery.rs  reactive_counter.rs  simple_counter.rs  styled_form.rs  theme_switcher.rs  todo_list.rs  visual_counter.rs
crates/valor_dsl/src/: bevy_events.rs  bevy_events_fix.txt  bevy_integration.rs  events.rs  lib.rs  observer_api_fix.sed  parser.rs  reactive_fixes.sed  reactive_html_macro.rs  standalone.rs
crates/valor_dsl/tests/: bevy_integration_test.rs  simple_test.rs
crates/wgpu_backend/: Cargo.toml
crates/wgpu_backend/src/: lib.rs
crates/wgpu_renderer/: Cargo.toml
crates/wgpu_renderer/src/: display_list.rs  lib.rs  offscreen.rs  renderer.rs  state.rs  text.rs
crates/wgpu_renderer/tests/: renderer_mirror.rs
old/js/: Cargo.toml
old/js/js_engine_v8/: Cargo.toml  build.rs
old/js/src/: console.rs  modules.rs  runtime.rs
old/valor_dsl/: Cargo.toml
old/valor_dsl/examples/: bevy_counter.rs  image_gallery.rs
old/valor_dsl/src/: bevy_events.rs  bevy_events_entityevent.txt  bevy_events_fix.sed  bevy_events_tail.txt  entityevent_fix.sed  html_macro.rs  lib.rs  macros.rs  observer_pattern_fix.sed  reactive_html_macro.rs  runtime.rs  runtime_observer_fix.sed  trigger_fix.sed
old/valor_query/: Cargo.toml
old/valor_query/src/: lib.rs
(+1284 files in other folders)
