cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
    "crates/*",
    "crates/css/modules/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Task handling
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
rayon = "1.11.0"

# Parsing
html5ever = "0.35.0"
cssparser = "0.35.0"

# Rendering
wgpu = "26.0.1"
winit = "0.30.12"
bytemuck = { version = "1.18.0", features = ["derive"] }
glyphon ={ git = "https://github.com/grovesNL/glyphon", rev = "724ab57edbd6c59ba219cd99cf89925d056392db" }

# Webpage handling
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["stream"] }

# Data types
base64 = "0.22.1"
bytes = "1.10.1"
lasso = "0.7.3"
indextree = "4.7.4"
smallvec = "2.0.0-alpha.11"
once_cell = "1.21.3"

# String stuff
unicode-linebreak = "0.1.5"
unicode-bidi = "0.3.18"

# Logging and error handling
log = "0.4.28"
env_logger = "0.11.8"
anyhow = { version = "1.0.99", features = ["backtrace"] }
tracing = "0.1.41"

# Testing
headless_chrome = "1.0.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
urlencoding = "2.1.3"
criterion = "0.7.0"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp"] }

# JavaScript engine
rusty_v8 = "0.32.1"

# Our crates
css = { path = "crates/css" }
html = { path = "crates/html" }
page_handler = { path = "crates/page_handler" }
wgpu_renderer = { path = "crates/wgpu_renderer" }
js = { path = "crates/js" }
js_engine_v8 = { path = "crates/js/js_engine_v8" }

# CSS modules (internal crates)
css_core = { path = "crates/css/modules/core" }
css_syntax = { path = "crates/css/modules/syntax" }
#css_style_attr = { path = "crates/css/modules/style_attr" }
#css_media_queries = { path = "crates/css/modules/media_queries" }
#css_conditional_rules = { path = "crates/css/modules/conditional_rules" }
#css_selectors = { path = "crates/css/modules/selectors" }
#css_namespaces = { path = "crates/css/modules/namespaces" }
#css_cascade = { path = "crates/css/modules/cascade" }
#css_values_units = { path = "crates/css/modules/values_units" }
#css_variables = { path = "crates/css/modules/variables" }
#css_display = { path = "crates/css/modules/display" }
css_box = { path = "crates/css/modules/box" }
#css_color = { path = "crates/css/modules/color" }
#css_backgrounds_borders = { path = "crates/css/modules/backgrounds_borders" }
#css_images = { path = "crates/css/modules/images" }
#css_fonts = { path = "crates/css/modules/fonts" }
#css_writing_modes = { path = "crates/css/modules/writing_modes" }
#css_flexbox = { path = "crates/css/modules/flexbox" }
#css_ui = { path = "crates/css/modules/ui" }
#css_transforms = { path = "crates/css/modules/transforms" }
#css_position = { path = "crates/css/modules/position" }
#css_sizing = { path = "crates/css/modules/sizing" }
#css_text = { path = "crates/css/modules/text" }
#css_text_decoration = { path = "crates/css/modules/text_decoration" }
layouter = { path = "crates/css/modules/layouter" }
style_engine = { path = "crates/css/modules/style_engine" }
css_text = { path = "crates/css/modules/text" }

[profile.dev]
opt-level = 1
lto = false

[profile.dev.package."*"]
opt-level = 3
codegen-backend = "cranelift"

[workspace.lints.rust]
warnings = "deny"
future-incompatible = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
unused = "deny"

# Strict lints, should not be changed.
[workspace.lints.clippy]
all = "deny"
cargo = "deny"
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
restriction = "deny"
style = "deny"
suspicious = "deny"
as_conversions = { level = "allow", priority = 1 }
allow_attributes = { level = "allow", priority = 1 }
arbitrary_source_item_ordering = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
else_if_without_else = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
mod_module_files = { level = "allow", priority = 1 }
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
pub_with_shorthand = { level = "allow", priority = 1 }
exhaustive_structs = { level = "allow", priority = 1 }
unseparated_literal_suffix = { level = "allow", priority = 1 }
float_arithmetic = { level = "allow", priority = 1 }
pub_use = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
exhaustive_enums = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
wildcard_enum_match_arm = { level = "allow", priority = 1 }