cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
    "crates/*",
    "crates/css/modules/*",
    "crates/css/orchestrator",
    "crates/js/js_engine_v8",
    "crates/renderer/wgpu_backend"
]
exclude = ["testing"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Task handling
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
rayon = "1.11.0"

# Parsing
html5ever = "0.35.0"
cssparser = "0.35.0"
csscolorparser = "0.7.2"

# Rendering
wgpu = "26.0.1"
winit = "0.30.12"
bytemuck = { version = "1.23.2", features = ["derive"] }
glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "724ab57edbd6c59ba219cd99cf89925d056392db" }
pollster = "0.4.0"

# Webpage handling
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["stream"] }

# Data types
base64 = "0.22.1"
bytes = "1.10.1"
lasso = "0.7.3"
indextree = "4.7.4"
smallvec = "2.0.0-alpha.11"
once_cell = "1.21.3"

# String stuff
unicode-linebreak = "0.1.5"
unicode-bidi = "0.3.18"

# Logging and error handling
log = "0.4.28"
env_logger = "0.11.8"
anyhow = { version = "1.0.99", features = ["backtrace"] }
tracing = "0.1.41"

# Testing
headless_chrome = { version = "1.0.18", features = ["fetch"] }
futures = "0.3"
chromiumoxide = { path = "testing/chromiumoxide", default-features = false, features = ["tokio-runtime"] }
# Previous: { git = "https://github.com/caido/dependency-chromiumoxide.git", branch = "ef-json-parsing", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
urlencoding = "2.1.3"
criterion = "0.7.0"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "webp"] }
zstd = "0.13.3"

# JavaScript engine
v8 = "142.1.0"

# Our crates
css = { path = "crates/css" }
html = { path = "crates/html" }
page_handler = { path = "crates/page_handler" }
renderer = { path = "crates/renderer" }
wgpu_backend = { path = "crates/renderer/wgpu_backend" }
js = { path = "crates/js" }
js_engine_v8 = { path = "crates/js/js_engine_v8", default-features = false }
benchhist = { path = "crates/benchhist" }

# CSS modules (internal crates)
css_orchestrator = { path = "crates/css/orchestrator" }
css_syntax = { path = "crates/css/modules/syntax" }
css_selectors = { path = "crates/css/modules/selectors" }
css_style_attr = { path = "crates/css/modules/style_attr" }
css_media_queries = { path = "crates/css/modules/media_queries" }
css_conditional_rules = { path = "crates/css/modules/conditional_rules" }
css_namespaces = { path = "crates/css/modules/namespaces" }
css_cascade = { path = "crates/css/modules/cascade" }
css_values_units = { path = "crates/css/modules/values_units" }
css_variables = { path = "crates/css/modules/variables" }
css_display = { path = "crates/css/modules/display" }
css_box = { path = "crates/css/modules/box" }
css_color = { path = "crates/css/modules/color" }
css_backgrounds_borders = { path = "crates/css/modules/backgrounds_borders" }
css_images = { path = "crates/css/modules/images" }
css_fonts = { path = "crates/css/modules/fonts" }
css_writing_modes = { path = "crates/css/modules/writing_modes" }
css_flexbox = { path = "crates/css/modules/flexbox" }
css_ui = { path = "crates/css/modules/ui" }
css_transforms = { path = "crates/css/modules/transforms" }
css_position = { path = "crates/css/modules/position" }
css_sizing = { path = "crates/css/modules/sizing" }
css_text = { path = "crates/css/modules/text" }
css_text_decoration = { path = "crates/css/modules/text_decoration" }
# Layouter was renamed to css_core
css_core = { path = "crates/css/modules/core" }

[profile.dev]
opt-level = 1
lto = false

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# Strict lints, should not be changed.
[workspace.lints.clippy]
all = "deny"
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

# Complexity
only_used_in_recursion = { level = "allow", priority = 1 }

# Nursery
future_not_send = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }

# Pedantic
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }

# Restriction
absolute_paths = { level = "deny", priority = 1 }
allow_attributes_without_reason = { level = "deny", priority = 1 }
assertions_on_result_states = { level = "deny", priority = 1 }
clone_on_ref_ptr = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
if_then_some_else_none = { level = "deny", priority = 1 }
let_underscore_must_use = { level = "deny", priority = 1 }
min_ident_chars = { level = "deny", priority = 1 }
multiple_inherent_impl = { level = "deny", priority = 1 }
mutex_atomic = { level = "deny", priority = 1 }
mutex_integer = { level = "deny", priority = 1 }
panic = { level = "deny", priority = 1 }
print_stderr = { level = "deny", priority = 1 }
print_stdout = { level = "deny", priority = 1 }
redundant_type_annotations = { level = "deny", priority = 1 }
renamed_function_params = { level = "deny", priority = 1 }
rest_pat_in_fully_bound_structs = { level = "deny", priority = 1 }
return_and_then = { level = "deny", priority = 1 }
same_name_method = { level = "deny", priority = 1 }
self_named_module_files = { level = "deny", priority = 1 }
semicolon_inside_block = { level = "deny", priority = 1 }
separated_literal_suffix = { level = "deny", priority = 1 }
shadow_unrelated = { level = "deny", priority = 1 }
single_char_lifetime_names = { level = "deny", priority = 1 }
string_lit_chars_any = { level = "deny", priority = 1 }
tests_outside_test_module = { level = "deny", priority = 1 }
todo = { level = "deny", priority = 1 }
try_err = { level = "deny", priority = 1 }
undocumented_unsafe_blocks = { level = "deny", priority = 1 }
unimplemented = { level = "deny", priority = 1 }
unnecessary_safety_comment = { level = "deny", priority = 1 }
unnecessary_safety_doc = { level = "deny", priority = 1 }
unnecessary_self_imports = { level = "deny", priority = 1 }
unneeded_field_pattern = { level = "deny", priority = 1 }
unreachable = { level = "deny", priority = 1 }
unused_result_ok = { level = "deny", priority = 1 }
unused_trait_names = { level = "deny", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }