cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/css",
    "crates/html",
    "crates/macros",
    "crates/page",
    "crates/renderer",
    "crates/layout",
    "crates/layout/crates/util",
    "crates/text",
]

exclude = [
    "deps/*",
    "old/*",
    "crates/js",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Parsing
html5ever = "0.35.0"
cssparser = "0.35.0"
lightningcss = { version = "1.0.0-alpha.70", default-features = false, features = ["into_owned"] }

# Data types
smallvec = "2.0.0-alpha.11"

# Logging
log = "0.4.28"

# Proc macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.dev]
opt-level = 1
debug = 0
strip = "debuginfo"
lto = false

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# Strict lints, should not be changed.
[workspace.lints.clippy]
all = "deny"
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

# Complexity
only_used_in_recursion = { level = "allow", priority = 1 }

# Nursery
future_not_send = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }

# Pedantic
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
implicit_hasher = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }

# Restriction
absolute_paths = { level = "deny", priority = 1 }
allow_attributes_without_reason = { level = "deny", priority = 1 }
assertions_on_result_states = { level = "deny", priority = 1 }
clone_on_ref_ptr = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
if_then_some_else_none = { level = "deny", priority = 1 }
let_underscore_must_use = { level = "deny", priority = 1 }
min_ident_chars = { level = "deny", priority = 1 }
multiple_inherent_impl = { level = "allow", priority = 1 }
mutex_atomic = { level = "deny", priority = 1 }
mutex_integer = { level = "deny", priority = 1 }
panic = { level = "deny", priority = 1 }
print_stderr = { level = "deny", priority = 1 }
print_stdout = { level = "deny", priority = 1 }
redundant_type_annotations = { level = "deny", priority = 1 }
renamed_function_params = { level = "deny", priority = 1 }
rest_pat_in_fully_bound_structs = { level = "deny", priority = 1 }
return_and_then = { level = "deny", priority = 1 }
same_name_method = { level = "deny", priority = 1 }
self_named_module_files = { level = "deny", priority = 1 }
semicolon_inside_block = { level = "deny", priority = 1 }
separated_literal_suffix = { level = "deny", priority = 1 }
shadow_unrelated = { level = "deny", priority = 1 }
single_char_lifetime_names = { level = "deny", priority = 1 }
string_lit_chars_any = { level = "deny", priority = 1 }
tests_outside_test_module = { level = "deny", priority = 1 }
todo = { level = "deny", priority = 1 }
try_err = { level = "deny", priority = 1 }
undocumented_unsafe_blocks = { level = "deny", priority = 1 }
unimplemented = { level = "deny", priority = 1 }
unnecessary_safety_comment = { level = "deny", priority = 1 }
unnecessary_safety_doc = { level = "deny", priority = 1 }
unnecessary_self_imports = { level = "deny", priority = 1 }
unneeded_field_pattern = { level = "deny", priority = 1 }
unreachable = { level = "deny", priority = 1 }
unused_result_ok = { level = "deny", priority = 1 }
unused_trait_names = { level = "deny", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }
