[package]
name = "html"
edition.workspace = true

[dependencies]
url.workspace = true
reqwest.workspace = true
html5ever.workspace = true
markup5ever.workspace = true

 tokio.workspace = true
 tokio-stream.workspace = true

 bytes.workspace = true
 lasso.workspace = true
 indextree.workspace = true
 smallvec.workspace = true

 log.workspace = true
 anyhow.workspace = true

[features]