[package]
name = "js"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
html5ever = "0.26"
tendril = "0.4"
url = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
serde_json = { workspace = true }
bytes = { workspace = true }

[lib]
name = "js"
path = "src/lib.rs"
