[package]
name = "js_engine_v8"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, optional = true }
js = { workspace = true }

# V8 is on by default; build with rusty_v8 always.
rusty_v8 = "0.32.1"

[dev-dependencies]
tokio = { workspace = true, features = ["sync"] }
