[package]
name = "page_handler"
edition.workspace = true

[dependencies]
html.workspace = true
css.workspace = true
layouter.workspace = true
style_engine.workspace = true
wgpu_renderer.workspace = true
js_engine_v8.workspace = true
js.workspace = true

url.workspace = true
reqwest.workspace = true

 tokio.workspace = true
tokio-stream.workspace = true

winit.workspace = true

indextree.workspace = true
bytes.workspace = true

log.workspace = true
anyhow.workspace = true

[features]