[package]
name = "page_handler"
edition.workspace = true

[lints]
workspace = true

[dependencies]
html.workspace = true
css.workspace = true
css_core.workspace = true
css_display.workspace = true
renderer.workspace = true
js_engine_v8.workspace = true
js.workspace = true

url.workspace = true
reqwest.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

winit.workspace = true

indextree.workspace = true
bytes.workspace = true

log.workspace = true
tracing.workspace = true
anyhow.workspace = true

# Text shaping and single-assignment helpers
glyphon.workspace = true
once_cell.workspace = true
unicode-linebreak.workspace = true