[package]
name = "rewrite_renderer"
version.workspace = true
edition.workspace = true

[dependencies]
rewrite_core = { path = "../core" }
rewrite_css = { path = "../css" }
rewrite_layout = { path = "../layout" }
lightningcss = { version = "1.0.0-alpha.70", default-features = false }
boxcar = "0.2"

[lints]
workspace = true
