[package]
name = "style_engine"
edition.workspace = true

[features]
# Phase 0: feature gate to allow a reduced style engine in the future.
default = ["full"]
full = []

[dependencies]
anyhow.workspace = true
html.workspace = true
js.workspace = true
css.workspace = true
log.workspace = true
csscolorparser = "0.6"

[dev-dependencies]
env_logger.workspace = true
