[package]
name = "valor"
edition.workspace = true
default-run = "valor"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
winit.workspace = true

url.workspace = true

log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

page_handler.workspace = true
renderer.workspace = true
wgpu_backend.workspace = true
js.workspace = true
css_core.workspace = true
css.workspace = true

# Needed by layout compare bin/core
html.workspace = true
headless_chrome.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
once_cell.workspace = true
js_engine_v8 = { workspace = true, default-features = false }
image.workspace = true

[dev-dependencies]
js.workspace = true
zstd.workspace = true
chromiumoxide.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
# Default to stub for layout tests (temporarily)
default = ["js_stub"]
# Use V8-backed engine - temporarily disabled
# js_v8 = ["js_engine_v8/v8", "page_handler/js_v8"]
# Use stub engine (no rusty_v8)
js_stub = ["js_engine_v8/stub", "page_handler/js_stub"]
