[package]
name = "valor"
edition.workspace = true
default-run = "valor"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
winit.workspace = true

url.workspace = true

log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

page_handler.workspace = true
renderer.workspace = true
wgpu_backend.workspace = true
js.workspace = true
css_core.workspace = true
css.workspace = true
css_text.workspace = true
glyphon.workspace = true

# Needed by layout compare bin/core
html.workspace = true
headless_chrome.workspace = true
chromiumoxide.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
once_cell.workspace = true
js_engine_v8.workspace = true
image.workspace = true

[dev-dependencies]
js.workspace = true
zstd.workspace = true
base64.workspace = true
pollster.workspace = true
tempfile.workspace = true
serde_json.workspace = true
