[package]
name = "wgpu_backend"
edition.workspace = true
version.workspace = true

[dependencies]
renderer = { path = "../renderer" }
wgpu.workspace = true
winit.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
glyphon.workspace = true
tracing.workspace = true
pollster = "0.3"
log.workspace = true
wgpu_renderer = { path = "../wgpu_renderer" }
