[package]
name = "wgpu_renderer"
edition.workspace = true

[features]
# Phase 0: feature flags for renderer subsystems.
default = []
retained_display_list = []
compositor = []

[dependencies]
wgpu.workspace = true
winit.workspace = true
html.workspace = true
js.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
glyphon.workspace = true
tracing.workspace = true