[package]
name = "wgpu_renderer"
edition.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
html.workspace = true
js.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
glyphon.workspace = true
tracing.workspace = true
pollster = "0.3"
log.workspace = true
renderer = { path = "../renderer" }