[package]
name = "valor_dsl"
version.workspace = true
edition.workspace = true

[lints.clippy]
needless_pass_by_value = "allow"
type_complexity = "allow"

[dependencies]
# Valor crates
js = { workspace = true }
html = { workspace = true }
css = { workspace = true }
page_handler = { workspace = true }
renderer = { workspace = true }
wgpu_backend = { workspace = true }
valor_dsl_macros = { path = "../valor_dsl_macros" }

# HTML/CSS parsing
html5ever = { workspace = true }
markup5ever_rcdom = "0.35"
cssparser = { workspace = true }

# Async runtime
tokio = { workspace = true }

# URL handling
url = { workspace = true }

# Error handling
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Data structures
indextree = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Windowing (for visual examples)
winit = { workspace = true }
pollster = { workspace = true }

# Bevy (optional)
bevy = { version = "0.17", optional = true, default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_window",
    "png",
    "x11",
] }

# Image handling for rendering
image = { version = "0.25", optional = true }

[features]
default = []
bevy_integration = ["bevy", "image"]

[[example]]
name = "simple_counter"

[[example]]
name = "bevy_counter"
required-features = ["bevy_integration"]

[[example]]
name = "bevy_ui"
required-features = ["bevy_integration"]

[[example]]
name = "reactive_counter"
required-features = ["bevy_integration"]

[[example]]
name = "image_gallery"
required-features = ["bevy_integration"]

[[example]]
name = "theme_switcher"
required-features = ["bevy_integration"]

[[example]]
name = "styled_form"
required-features = ["bevy_integration"]
