[package]
name = "valor_query"
version.workspace = true
edition.workspace = true
description = "Query-based incremental computation system for Valor browser engine"

[dependencies]
# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

# Thread-local storage
thread_local = "1.1"

# Parallelism
rayon.workspace = true

# Hashing
rustc-hash = "2.1"

# Stable node identifiers
js = { path = "../js" }

# Logging
log.workspace = true

# Error handling
anyhow.workspace = true

[dev-dependencies]
# For testing
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
