[package]
name = "wgpu_backend"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
renderer.workspace = true
wgpu.workspace = true
winit.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
glyphon.workspace = true
tracing.workspace = true
pollster.workspace = true
log.workspace = true
