[package]
name = "rewrite_page"
version.workspace = true
edition.workspace = true

[dependencies]
rewrite_core = { path = "../core" }
rewrite_html = { path = "../html" }
rewrite_css = { path = "../css" }
cssparser = "0.34"
selectors = "0.25"

[dev-dependencies]
serde_json = "1.0"
chromiumoxide = { version = "0.8.0", default-features = false, features = ["tokio-runtime"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
rewrite_layout = { path = "../layout" }
rewrite_layout_size_impl = { path = "../layout/crates/size/impls" }
rewrite_layout_offset_impl = { path = "../layout/crates/offset/impls" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
num_cpus = "1.16"

[lints]
workspace = true
